# Sieve-of-Eratosthenes

./: CMakeLists.txt  README.md  Sieve.h  Siever.h  main.cpp
DLList/: DLList.h  Node.h
SieveList/: SieveList.cpp  SieveList.h
Sieves/EratosthenesSieve/: EratosthenesSieve.cpp  EratosthenesSieve.h
Sieves/OptimizedSieve/: OptimizedSieve.cpp  OptimizedSieve.h
data/: Eratosthenes-Sieve-Statistics.csv  Optimized-Sieve-Statistics.csv
